--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,28 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 12:31]
+#+CAPTION: Clock summary at [2017-07-09 Sun 12:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:01* |       |      | 100.0 |
+| *Total time*                                                                | *18:04* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:01   |       |      | 100.0 |
-| Active                                                                      |         | 18:01 |      | 100.0 |
+| Stories                                                                     | 18:04   |       |      | 100.0 |
+| Active                                                                      |         | 18:04 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.2 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.7 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.6 |
 | COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  23.2 |
 | COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   8.8 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.1 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.4 |
-| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.9 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  15.1 |
+| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.8 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  15.0 |
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.7 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.2 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.6 |
 | COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  19.5 |
-| STARTED Move helpers from =transforms= namespace                            |         |       | 0:45 |   4.2 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   4.2 |
+| COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -276,17 +277,19 @@ meta-model types should go to a generic namespace such as "helpers".
 - resolver
 - path extractor
 
-*** Move helpers from main  namespace                                 :story:
-
-Types such as name builder etc need to be moved to the helpers namespace.
-
-*** Replace expanders with transforms                                 :story:
+*** COMPLETED Replace expanders with transforms                       :story:
+    CLOSED: [2017-07-09 Sun 12:35]
+    CLOCK: [2017-07-09 Sun 12:32]--[2017-07-09 Sun 12:35] =>  0:03
 
 Tasks:
 
 - use the model generated from the transforms instead of the
   expanders.
 - fix all resulting errors.
+
+*** Move helpers from main  namespace                                 :story:
+
+Types such as name builder etc need to be moved to the helpers namespace.
 
 *** Implement the mapper as a transform                               :story:
 
