--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,29 +12,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 12:36]
+#+CAPTION: Clock summary at [2017-07-09 Sun 13:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:04* |       |      | 100.0 |
+| *Total time*                                                                | *18:26* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:04   |       |      | 100.0 |
-| Active                                                                      |         | 18:04 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.4 |
+| Stories                                                                     | 18:26   |       |      | 100.0 |
+| Active                                                                      |         | 18:26 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.2 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.6 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  23.2 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   8.8 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.5 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  22.7 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   8.6 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.1 |
-| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.4 |
+| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.3 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.8 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  15.0 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.7 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  14.7 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.6 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.2 |
-| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.6 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  19.5 |
-| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   4.2 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.5 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  19.1 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   4.1 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.3 |
+| STARTED Remove all legacy classes from yarn                                 |         |       | 0:22 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -288,6 +289,7 @@ Tasks:
 - fix all resulting errors.
 
 *** STARTED Remove all legacy classes from yarn                       :story:
+    CLOCK: [2017-07-09 Sun 13:36]--[2017-07-09 Sun 13:38] =>  0:02
     CLOCK: [2017-07-09 Sun 12:36]--[2017-07-09 Sun 12:56] =>  0:20
 
 Remove all of the code that got moved into transforms, fixing tests
