--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 13:38]
+#+CAPTION: Clock summary at [2017-07-09 Sun 13:40]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:26* |       |      | 100.0 |
+| *Total time*                                                                | *18:27* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:26   |       |      | 100.0 |
-| Active                                                                      |         | 18:26 |      | 100.0 |
+| Stories                                                                     | 18:27   |       |      | 100.0 |
+| Active                                                                      |         | 18:27 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.2 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   6.5 |
@@ -35,7 +35,7 @@
 | COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  19.1 |
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   4.1 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.3 |
-| STARTED Remove all legacy classes from yarn                                 |         |       | 0:22 |   2.0 |
+| STARTED Remove all legacy classes from yarn                                 |         |       | 0:23 |   2.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -289,6 +289,7 @@ Tasks:
 - fix all resulting errors.
 
 *** STARTED Remove all legacy classes from yarn                       :story:
+    CLOCK: [2017-07-09 Sun 13:39]--[2017-07-09 Sun 13:40] =>  0:01
     CLOCK: [2017-07-09 Sun 13:36]--[2017-07-09 Sun 13:38] =>  0:02
     CLOCK: [2017-07-09 Sun 12:36]--[2017-07-09 Sun 12:56] =>  0:20
 
