--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 14:32]
+#+CAPTION: Clock summary at [2017-07-09 Sun 14:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:05* |       |      | 100.0 |
+| *Total time*                                                                | *19:06* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:05   |       |      | 100.0 |
-| Active                                                                      |         | 19:05 |      | 100.0 |
+| Stories                                                                     | 19:06   |       |      | 100.0 |
+| Active                                                                      |         | 19:06 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.1 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   6.3 |
@@ -35,7 +35,7 @@
 | COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  18.4 |
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.9 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.3 |
-| STARTED Port all expander unit tests to transforms                          |         |       | 0:41 |   3.6 |
+| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.7 |
 | STARTED Remove all legacy classes from yarn                                 |         |       | 0:20 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -289,7 +289,9 @@ Tasks:
   expanders.
 - fix all resulting errors.
 
-*** STARTED Port all expander unit tests to transforms                :story:
+*** COMPLETED Port all expander unit tests to transforms              :story:
+    CLOSED: [2017-07-09 Sun 14:34]
+    CLOCK: [2017-07-09 Sun 14:33]--[2017-07-09 Sun 14:34] =>  0:01
     CLOCK: [2017-07-09 Sun 14:31]--[2017-07-09 Sun 14:32] =>  0:01
     CLOCK: [2017-07-09 Sun 14:25]--[2017-07-09 Sun 14:30] =>  0:05
     CLOCK: [2017-07-09 Sun 14:08]--[2017-07-09 Sun 14:17] =>  0:09
